recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:3: error: reassignment to val
if(levels=1){
         ^PolygonFractal:6: error: not found: value lenght
	avance(lenght)
               ^PolygonFractal:8: error: not found: value lenght
	avance(lenght)
               ^PolygonFractal:10: error: not found: value lenght
	avance(lenght)
               ^PolygonFractal:12: error: not found: value lenght
	avance(lenght)
               ^