recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
if(levels=1){
	avance(length)
	droite(75)
	avance(lenght)
	droite(75)
	avance(lenght)
	droite(75)
	avance(lenght)
	droite(75)
	avance(lenght)
	
}else{
	
	
}
}
